@@ -26,6 +26,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - DCC ack reading
  - Tray
  - Req GTK 2.10
+ - Channel modes are no longer shown in the titlebar if they contain a key.
+ - 
  - 
  - 
  - Perl (Lian Wan Situ)
